--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,19 +21,19 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: CheckOut 
+      - name: checkout 
       - uses: actions/checkout@v4
       
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.0.2
         with:
-          node-version: "18.19.1"
+          node-version: "v18.19.1"
 
-      - name : Instalar dependencias
-        run : npm install
+      - name: Instalar dependencias
+        run: npm install
 
-      - name : Construir Aplicacion
-        run : npm run build:prod
+      - name: Construir Aplicacion
+        run: npm run build:prod
 
       - name: GitHub Pages
         uses: crazy-max/ghaction-github-pages@v4.0.0
